--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -22,5 +22,18 @@
             </nav>
         </section>
     </header>
+    <main>
+        <section>
+            <img src="../img/hockey_3.jpg" alt="Hockey players" width="300">
+        </section>
+        <section>
+            <p>
+                Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
+            </p>
+            <p>
+                We reply to your email as soon as we can.
+            </p>
+        </section>
+    </main>
 </body>
 </html>
