--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <header>
-        <img src="../img/LogoMightyDucks-01.png" alt="Logo hockey league" width="150">
-        <h1>
-            Mighty Ducks Hockey League
-        </h1>
-        <nav>
-            <a href="../index.html">HOME</a>
-            <a href="#">ABOUT US</a>
-            <a href="./contact.html">CONTACT</a>
-        </nav>
+        <section>
+            <img src="../img/LogoMightyDucks-01.png" alt="Logo hockey league" width="150">
+        </section>
+        <section>
+            <h1>
+                Mighty Ducks Hockey League
+            </h1>
+            <nav>
+                <a href="../index.html">HOME</a>
+                <a href="#">ABOUT US</a>
+                <a href="./contact.html">CONTACT</a>
+            </nav>
+        </section>
     </header>
     <main>
         <img src="../img/hockey_2.jpg" alt="Hockey player" width="300">
