Modificaciones task2, modelo 2 elegido

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -4,35 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Contact</title>
 </head>
 <body>
     <header>
         <section>
-            <img src="../img/LogoMightyDucks-01.png" alt="Logo hockey league" width="150">
-        </section>
-        <section>
             <h1>
                 Mighty Ducks Hockey League
             </h1>
-            <nav>
-                <a href="../index.html">HOME</a>
-                <a href="./about.html">ABOUT US</a>
-                <a href="#">CONTACT</a>
-            </nav>
+            <article class="banner">
+                <nav>
+                    <a href="../index.html">HOME</a>
+                    <a href="./about.html">ABOUT US</a>
+                    <a href="./contact.html">CONTACT</a>
+                </nav>
+            </article>
+            <article>
+                <h2>Upcoming Events</h2>  
+            </article>
         </section>
     </header>
     <main>
         <section>
-            <img src="../img/hockey_3.jpg" alt="Hockey players" width="300">
-        </section>
-        <section>
-            <p>
-                Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
-            </p>
-            <p>
-                We reply to your email as soon as we can.
-            </p>
+            <article>
+                <img src="../img/LogoMightyDucks-01.png" alt="Logo hockey league">
+            </article>
+            <article>
+                <p>
+                    Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
+                </p>
+                <p>
+                    We reply to your email as soon as we can.
+                </p>
+            </article>
         </section>
     </main>
 </body>
