--- a/assets/index.html
+++ b/assets/index.html
@@ -4,55 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Task1</title>
 </head>
 <body>
     <header>
         <section>
-            <img src="./img/LogoMightyDucks-01.png" alt="Logo hockey league" width="150">
-        </section>
-        <section>
             <h1>
                 Mighty Ducks Hockey League
             </h1>
-            <nav>
-                <a href="#">HOME</a>
-                <a href="./pages/about.html">ABOUT US</a>
-                <a href="./pages/contact.html">CONTACT</a>
-            </nav>
+            <article class="banner">
+                <nav>
+                    <a href="./index.html">HOME</a>
+                    <a href="./pages/about.html">ABOUT US</a>
+                    <a href="./pages/contact.html">CONTACT</a>
+                </nav>
+            </article>
+            <article>
+                <h2>Upcoming Events</h2> 
+            </article>
         </section>
     </header>
     <main>
-        <img src="./img/hockey_1.jpg" alt="Hockey player" width="300">
-        <h3>
-            Upcoming Events
-        </h3>
-        <ul>
-            <li>
-                <strong>
-                    August 4
-                </strong>
+        <section>
+            <article>
+                <img src="./img/LogoMightyDucks-01.png" alt="Logo hockey league">
+            </article>
+            <article>
                 <ul>
-                    MDSL Fundraiser
+                    <li>
+                        <h3>
+                            August 4
+                        </h3>
+                        <ul>
+                            <li class="to-do">
+                                MDSL Fundraiser
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>
+                            August 16
+                        </h3>
+                        <ul>
+                            <li class="to-do">
+                                Season Kick-off: Meet the Teams
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>
+                            September 1
+                        </h3>
+                        <ul>
+                            <li class="to-do">
+                                First Game of the Season (Check Game Schedule for details)
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
-            </li>
-            <li>
-                <strong>
-                    August 16
-                </strong>
-                <ul>
-                    Season Kick-off: Meet the Teams
-                </ul>
-            </li>
-            <li>
-                <strong>
-                    September 1
-                </strong>
-                <ul>
-                    First Game of the Season (Check Game Schedule for details)
-                </ul>
-            </li>
-        </ul>
+            </article>
+        </section>
     </main>
 </body>
 </html>
