--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -4,51 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <link rel="shortcut icon" href="../img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
+    <title>Contact</title>
 </head>
 <body>
     <header>
         <section>
-            <img src="../img/LogoMightyDucks-01.png" alt="Logo hockey league" width="150">
-        </section>
-        <section>
             <h1>
                 Mighty Ducks Hockey League
             </h1>
-            <nav>
-                <a href="../index.html">HOME</a>
-                <a href="#">ABOUT US</a>
-                <a href="./contact.html">CONTACT</a>
-            </nav>
+            <article class="banner">
+                <nav>
+                    <a href="../index.html">HOME</a>
+                    <a href="./about.html">ABOUT US</a>
+                    <a href="./contact.html">CONTACT</a>
+                </nav>
+            </article>
+            <article>
+                <h2>Upcoming Events</h2>  
+            </article>
         </section>
     </header>
     <main>
-        <img src="../img/hockey_2.jpg" alt="Hockey player" width="300">
-        <h3>
-            Mision
-        </h3>
-        <p>
-                To support young athletes living Chicago's northside neighborhood, who have an interest 
-            in learning and playing soccer, with opportunities to learn and practice skills related to 
-            the game of hockey, specifically those skills around team cooperation and good sportsmanship.
-        </p>
-        <h3>
-            Vision
-        </h3>
-        <p>
-                The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through 
-            the building of character, self-discipline, and leadership.
-        </p>
-        <h3>
-            General Information
-        </h3>
-        <p>
-                The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
-            Chicago's northside neighborhoods an environment in which to learn and play hockey. 
-            To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago 
-            northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous 
-            volunteer time of parents and previous league members.
-        </p>
+         <section>
+            <article>
+                <img src="../img/LogoMightyDucks-01.png" alt="Logo hockey league">
+            </article>
+            <article>
+                <div>
+                    <h2>
+                        Mision
+                    </h2>
+                    <p>
+                        To support young athletes living Chicago's northside neighborhood, who have an interest in 
+                        learning and playing soccer, with opportunities to learn and practice skills related to the game of 
+                        hockey, specifically those skills around team cooperation and good sportsmanship.
+                    </p>
+                </div>
+                <div>
+                    <h2>
+                        Vision
+                    </h2>
+                    <p>
+                        The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
+                        through the building of character, self-discipline, and leadership.
+                    </p>
+                </div>
+                <div>
+                    <h2>
+                        General Information
+                    </h2>
+                    <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
+                        Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
+                        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
+                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members.
+                    </p>
+                </div>
+            </article>
+        </section>
     </main>
 </body>
 </html>
