Reubicacion de la carpeta pages y el archivo index.html, correccion de enlaces

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="./assets/img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Task1</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             </h1>
             <article class="banner">
                 <nav>
-                    <a href="./index.html">HOME</a>
+                    <a href="#">HOME</a>
                     <a href="./pages/about.html">ABOUT US</a>
                     <a href="./pages/contact.html">CONTACT</a>
                 </nav>
@@ -29,7 +29,7 @@
     <main>
         <section>
             <article>
-                <img src="./img/LogoMightyDucks-01.png" alt="Logo hockey league">
+                <img src="./assets/img/LogoMightyDucks-01.png" alt="Logo hockey league">
             </article>
             <article>
                 <ul>
