--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="shortcut icon" href="../assets/img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/styles/style.css">
     <title>Contact</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
             <article class="banner">
                 <nav>
                     <a href="../index.html">HOME</a>
-                    <a href="./about.html">ABOUT US</a>
+                    <a href="#">ABOUT US</a>
                     <a href="./contact.html">CONTACT</a>
                 </nav>
             </article>
@@ -29,7 +29,7 @@
     <main>
          <section>
             <article>
-                <img src="../img/LogoMightyDucks-01.png" alt="Logo hockey league">
+                <img src="../assets/img/LogoMightyDucks-01.png" alt="Logo hockey league">
             </article>
             <article>
                 <div>
