Task3: nuevas paginas html, tablas, listas, modificaciones estilos

--- a/index.html
+++ b/index.html
@@ -4,34 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous"
+    referrerpolicy="no-referrer"/>
     <link rel="shortcut icon" href="./assets/img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>Task1</title>
+    <title>Mighty Ducks</title>
 </head>
 <body>
     <header>
-        <section>
-            <h1>
-                Mighty Ducks Hockey League
-            </h1>
-            <article class="banner">
+        <div>
+            <section>
+                <div>
+                    <a href="./index.html"><img src="./assets/img/Logo.png" alt="Logo Mighty Ducks"></a>
+                </div>
+                <div>
+                    <h1>
+                        Mighty Ducks Hockey League
+                    </h1>
+                </div>
+            </section>
+            <div class="banner">
                 <nav>
                     <a href="#">HOME</a>
                     <a href="./pages/about.html">ABOUT US</a>
                     <a href="./pages/contact.html">CONTACT</a>
+                    <a href="./pages/rules.html">RULES</a>
                 </nav>
-            </article>
+            </div>
             <article>
                 <h2>Upcoming Events</h2> 
             </article>
-        </section>
+        </div>
     </header>
     <main>
-        <section>
-            <article>
-                <img src="./assets/img/LogoMightyDucks-01.png" alt="Logo hockey league">
-            </article>
-            <article>
+        <div>
+            <div>
+                <img src="./assets/img/hockey_1.jpg" alt="hockey player">
+            </div>
+            <div>
                 <ul>
                     <li>
                         <h3>
@@ -64,8 +75,21 @@
                         </ul>
                     </li>
                 </ul>
-            </article>
-        </section>
+                <div class="btn-container">
+                    <a class="btn-schedule" href="./pages/schedule.html">Game Schedule</a>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://twitter.com/"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+        </div>
+        <div>
+            <p>Mighty Ducks &#169; 1987</p>
+        </div>
+    </footer>
 </body>
 </html>
