--- a/pages/about.html
+++ b/pages/about.html
@@ -4,65 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous"
+    referrerpolicy="no-referrer"/>
     <link rel="shortcut icon" href="../assets/img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="../assets/styles/style.css">
-    <title>Contact</title>
+    <title>About us</title>
 </head>
 <body>
     <header>
-        <section>
-            <h1>
-                Mighty Ducks Hockey League
-            </h1>
-            <article class="banner">
+        <div>
+            <section>
+                <div>
+                    <a href="../index.html"><img src="../assets/img/Logo.png" alt="Logo Mighty Ducks"></a>
+                </div>
+                <div>
+                    <h1>
+                        Mighty Ducks Hockey League
+                    </h1>
+                </div>
+            </section>
+            <div class="banner">
                 <nav>
                     <a href="../index.html">HOME</a>
                     <a href="#">ABOUT US</a>
                     <a href="./contact.html">CONTACT</a>
+                    <a href="./rules.html">RULES</a>
                 </nav>
-            </article>
+            </div>
             <article>
-                <h2>Upcoming Events</h2>  
+                <h2>Upcoming Events</h2> 
             </article>
-        </section>
+        </div>
     </header>
     <main>
-         <section>
-            <article>
-                <img src="../assets/img/LogoMightyDucks-01.png" alt="Logo hockey league">
-            </article>
-            <article>
-                <div>
-                    <h2>
-                        Mision
-                    </h2>
-                    <p>
-                        To support young athletes living Chicago's northside neighborhood, who have an interest in 
-                        learning and playing soccer, with opportunities to learn and practice skills related to the game of 
+        <div>
+            <div class="logo">
+                <img src="../assets/img/hockey_2.jpg" alt="hockey player">
+            </div>
+            <div class="description">
+                <dl>
+                    <dt>Mision</dt>
+                    <dd>
+                        To support young athletes living Chicago's northside neighborhood, who have an interest in                         learning and playing soccer, with opportunities to learn and practice skills related to the game of 
                         hockey, specifically those skills around team cooperation and good sportsmanship.
-                    </p>
-                </div>
-                <div>
-                    <h2>
-                        Vision
-                    </h2>
-                    <p>
-                        The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
-                        through the building of character, self-discipline, and leadership.
-                    </p>
-                </div>
-                <div>
-                    <h2>
-                        General Information
-                    </h2>
-                    <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
+                    </dd>
+                    <dt>Vision</dt>
+                    <dd>
+                        To support young athletes living Chicago's northside neighborhood, who have an interest in                         learning and playing soccer, with opportunities to learn and practice skills related to the game of 
+                        hockey, specifically those skills around team cooperation and good sportsmanship.
+                    </dd>
+                    <dt>General Information</dt>
+                    <dd>
+                        The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
                         Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
                         member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
-                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members.
-                    </p>
-                </div>
-            </article>
-        </section>
+                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer 
+                        time of parents and previous league members.
+                    </dd>
+                </dl>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://twitter.com/"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+        </div>
+        <div>
+            <p>Mighty Ducks &#169; 1987</p>
+        </div>
+    </footer>
 </body>
 </html>
