--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,42 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous"
+    referrerpolicy="no-referrer"/>
     <link rel="shortcut icon" href="../assets/img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="../assets/styles/style.css">
     <title>Contact</title>
 </head>
 <body>
     <header>
-        <section>
-            <h1>
-                Mighty Ducks Hockey League
-            </h1>
-            <article class="banner">
+        <div>
+            <section>
+                <div>
+                    <a href="../index.html"><img src="../assets/img/Logo.png" alt="Logo Mighty Ducks"></a>
+                </div>
+                <div>
+                    <h1>
+                        Mighty Ducks Hockey League
+                    </h1>
+                </div>
+            </section>
+            <div class="banner">
                 <nav>
                     <a href="../index.html">HOME</a>
                     <a href="./about.html">ABOUT US</a>
                     <a href="#">CONTACT</a>
+                    <a href="./rules.html">RULES</a>
                 </nav>
-            </article>
+            </div>
             <article>
-                <h2>Upcoming Events</h2>  
+                <h2>Upcoming Events</h2> 
             </article>
-        </section>
+        </div>
     </header>
     <main>
-        <section>
-            <article>
-                <img src="../assets/img/LogoMightyDucks-01.png" alt="Logo hockey league">
-            </article>
-            <article>
+        <div>
+            <div>
+                <img src="../assets/img/hockey_3.jpg" alt="hockey player">
+            </div>
+            <div>
                 <p>
                     Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
                 </p>
                 <p>
                     We reply to your email as soon as we can.
                 </p>
-            </article>
-        </section>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://twitter.com/"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+        </div>
+        <div>
+            <p>Mighty Ducks &#169; 1987</p>
+        </div>
+    </footer>
 </body>
 </html>
