Contenido de la task4, nuevas pages.html, maps, forms, style.css

--- a/pages/about.html
+++ b/pages/about.html
@@ -30,10 +30,11 @@
                     <a href="#">ABOUT US</a>
                     <a href="./contact.html">CONTACT</a>
                     <a href="./rules.html">RULES</a>
+                    <a href="./registration.html">REGISTRATION</a>
                 </nav>
             </div>
             <article>
-                <h2>Upcoming Events</h2> 
+                <h2>About us</h2> 
             </article>
         </div>
     </header>
