--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <a href="./pages/about.html">ABOUT US</a>
                     <a href="./pages/contact.html">CONTACT</a>
                     <a href="./pages/rules.html">RULES</a>
+                    <a href="./pages/registration.html">REGISTRATION</a>
                 </nav>
             </div>
             <article>
