--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,10 +30,11 @@
                     <a href="./about.html">ABOUT US</a>
                     <a href="#">CONTACT</a>
                     <a href="./rules.html">RULES</a>
+                    <a href="./registration.html">REGISTRATION</a>
                 </nav>
             </div>
             <article>
-                <h2>Upcoming Events</h2> 
+                <h2>Contact</h2> 
             </article>
         </div>
     </header>
