--- a/pages/rules.html
+++ b/pages/rules.html
@@ -30,10 +30,11 @@
                     <a href="../pages/about.html">ABOUT US</a>
                     <a href="../pages/contact.html">CONTACT</a>
                     <a href="#">RULES</a>
+                    <a href="./registration.html">REGISTRATION</a>
                 </nav>
             </div>
             <article>
-                <h2>Upcoming Events</h2> 
+                <h2>Rules of Play & Policies</h2> 
             </article>
         </div>
     </header>
