--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -30,20 +30,21 @@
                     <a href="./about.html">ABOUT</a>
                     <a href="./contact.html">CONTACT</a>
                     <a href="./rules.html">RULES</a>
+                    <a href="./registration.html">REGISTRATION</a>
                 </nav>
             </div>
             <article>
-                <h2>Upcoming Events</h2> 
+                <h2>Game Information</h2> 
             </article>
         </div>
     </header>
-    <main class="schedule-container">
+    <main class="schedule-container schedule-form-main">
         <div class="main-div-schedule">
 <!--             <div>
                 <img src="../images/hockey1.jpg" alt="hockey player">
             </div> -->
             <section>
-                <h3>Fall Schedule</h3>
+                <h3 class="section-h3-table">Fall Schedule</h3>
                 <table>
                     <caption>* All games take place on Saturday.</caption>
                     <thead>
@@ -55,32 +56,32 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td rowspan="2">9/01</td>
+                        <tr class="even">
+                            <td rowspan="2" class="tbody-td">9/01</td>
                             <td>U1 and U4</td>
                             <td>AJ Katzenmaier</td>
                             <td>9:30 a.m</td>
                         </tr>
-                        <tr>
+                        <tr class="odd">
                             
                             <td>U3 and U2</td>
                             <td>Greenbay</td>
                             <td>1:00 p.m</td>
                         </tr>
-                        <tr>
-                            <td rowspan="2">9/08</td>
+                        <tr class="even">
+                            <td rowspan="2" class="tbody-td">9/08</td>
                             <td>U5 and U6</td>
                             <td>Howard A Yeager</td>
                             <td>9:30 a.m</td>
                         </tr>
-                        <tr>
+                        <tr class="odd">
                             
                             <td>U6 and U1</td>
                             <td>Marjorie P Hart</td>
                             <td>1:00 p.m</td>
                         </tr>
-                        <tr>
-                            <td rowspan="2">9/15</td>
+                        <tr class="even">
+                            <td rowspan="2" class="tbody-td">9/15</td>
                             <td>U2 and U4</td>
                             <td>North</td>
                             <td>9:30 a.m</td>
@@ -91,20 +92,20 @@
                             <td>AJ Katzenmaier</td>
                             <td>1:00 p.m</td>
                         </tr>
-                        <tr>
-                            <td rowspan="2">9/22</td>
+                        <tr class="odd">
+                            <td rowspan="2" class="tbody-td">9/22</td>
                             <td>U1 and U3</td>
                             <td>South</td>
                             <td>9:30 a.m</td>
                         </tr>           
-                        <tr>
+                        <tr class="even">
 
                             <td>U2 and U6</td>
                             <td>Howard A Yeager</td>
                             <td>1:00 p.m</td>
                         </tr>
-                        <tr>
-                            <td>9/29</td>
+                        <tr class="odd">
+                            <td class="tbody-td">9/29</td>
                             <td>U4 and U5</td>
                             <td>Greenbay</td>
                             <td>9:30 p.m</td>
@@ -112,6 +113,7 @@
                     </tbody>
                 </table>
             </section>
+            <a class="location-school-info" href="./locations.html">School's Locations</a>
         </div>
         <div class="schedule-additional">
             <div class="schedule-info">
@@ -121,8 +123,8 @@
             <div class="schedule-contact-info">
                 <p><span>Please direct questions to:</span>Michael Randall, League Coordinator.</p>
                 <div class="schedule-contact">
-                    <p><span>Phone:</span>(630) 690-8132</p>
-                    <p><span>Email:</span>michael.randall@chihockey.org</p>
+                    <p><span>Phone:</span><a href="tel:6306908132">(630) 690-8132</a></p>
+                    <p><span>Email:</span><a href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
                 </div>
             </div>
         </div>
