Se agregó un textarea al contact.html

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,6 +50,12 @@
                 <p>
                     We reply to your email as soon as we can.
                 </p>
+                <form action="../show_data.html">
+                    <textarea name="coment" id="message" cols="30" rows="10" placeholder="Leave a message"></textarea>
+                    <div>
+                        <button>Enviar</button>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
